<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:id="@+id/coordinator_layout"
    android:layout_height="match_parent"
    tools:context=".DetailMovieActivity"
    >


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="480dp"
        android:id="@+id/app_bar"
        android:theme="@style/Theme.EBioskop.Detail.Collapsed">
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">
            <ImageView
            android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/image_detail_poster"
                app:layout_collapseMode="parallax"
                android:src="@drawable/ic_launcher_background"
                android:scaleType="fitXY"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_gravity="top"
                android:background="@drawable/scrim_topdown"
                android:fitsSystemWindows="true" />

            <View
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_gravity="bottom"
                android:background="@drawable/scrim" />
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_detail"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"

                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                android:textColor="@color/black"
                android:text="@string/title"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/tv_title_detail"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_genre_detail"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:textColor="#e6ac00"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_detail"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/genre"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:id="@+id/rv_detail"
                app:layout_constraintTop_toBottomOf="@+id/tv_genre_detail"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_height="wrap_content">
                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rating"
                    android:id="@+id/rating_detail"
                    android:rating="5"
                    android:layout_marginStart="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    style="?android:attr/ratingBarStyleSmall"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/tv_rating_detail"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/rating_detail"
                    android:text="@string/rating"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"

                    android:textSize="14sp"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/tv_rating_detail"
                    android:text="@string/div_10"/>
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                app:layout_constraintTop_toBottomOf="@+id/rv_detail"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/description"
                android:id="@+id/desc_detail"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_description"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="5dp"
                android:textSize="15sp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="0dp"
                android:justificationMode="inter_word"
                android:breakStrategy="high_quality"

                app:layout_constraintTop_toBottomOf="@+id/desc_detail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/tv_desc_detail"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_date_detail"
                android:text="@string/date"
                android:textStyle="italic"
                app:layout_constraintTop_toBottomOf="@+id/tv_desc_detail"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp"
                android:paddingRight="10dp"
                android:layout_gravity="right"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>