<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:text="About App"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <ImageView
            android:layout_width="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_height="150dp"
            android:src="@drawable/logo"
            android:layout_marginBottom="10dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:id="@+id/txt_nama_app"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="18dp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:text="Created By:"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <ImageView
            android:layout_width="80dp"
            android:layout_gravity="center_horizontal"
            android:layout_height="80dp"
            android:src="@drawable/fotoku"
            android:layout_marginBottom="10dp"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:text="@string/namaku"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:layout_marginBottom="10dp"
        android:text="@string/nrp"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"

        android:textAlignment="center"
        android:text="Version 1.0"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="18dp"
        android:textStyle="bold" />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_marginTop="30dp"
        android:background="#CCFFCC"
        android:orientation="vertical" >
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal" >
        <Button
            android:id="@+id/btn_custom_alert_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="OK"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>
</LinearLayout>